--- a/css/style.css
+++ b/css/style.css
@@ -7,22 +7,22 @@ html {
 }
 
 body {
-  background: #c1bdba;
+  background: #dde9e2;
   font-family: 'Titillium Web', sans-serif;
 }
 
 a {
   text-decoration: none;
-  color: #1ab188;
+  color: #0aa046;
   -webkit-transition: .5s ease;
   transition: .5s ease;
 }
 a:hover {
-  color: #179b77;
+  color: #2cc45a;
 }
 
 .form {
-  background: rgba(19, 35, 47, 0.9);
+  background: white;
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
@@ -45,7 +45,7 @@ a:hover {
   text-decoration: none;
   padding: 15px;
   background: rgba(160, 179, 176, 0.25);
-  color: #a0b3b0;
+  color: #0aa046;
   font-size: 20px;
   float: left;
   width: 50%;
@@ -55,11 +55,11 @@ a:hover {
   transition: .5s ease;
 }
 .tab-group li a:hover {
-  background: #179b77;
+  background: #0aa046;
   color: #ffffff;
 }
 .tab-group .active a {
-  background: #1ab188;
+  background: #0aa046;
   color: #ffffff;
 }
 
@@ -69,7 +69,7 @@ a:hover {
 
 h1 {
   text-align: center;
-  color: #ffffff;
+  color: #0aa046;
   font-weight: 300;
   margin: 0 0 40px;
 }
@@ -79,7 +79,7 @@ label {
   -webkit-transform: translateY(6px);
           transform: translateY(6px);
   left: 13px;
-  color: rgba(255, 255, 255, 0.5);
+  color: #0aa046;
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
   -webkit-backface-visibility: hidden;
@@ -88,7 +88,7 @@ label {
 }
 label .req {
   margin: 2px;
-  color: #1ab188;
+  color: #0aa046;
 }
 
 label.active {
@@ -100,9 +100,8 @@ label.active {
 label.active .req {
   opacity: 0;
 }
-
 label.highlight {
-  color: #ffffff;
+  color: #0aa046;
 }
 
 input, textarea {
@@ -113,8 +112,8 @@ input, textarea {
   padding: 5px 10px;
   background: none;
   background-image: none;
-  border: 1px solid #a0b3b0;
-  color: #ffffff;
+  border: 1px solid #0aa046;
+  color: #0aa046;
   border-radius: 0;
   -webkit-transition: border-color .25s ease, box-shadow .25s ease;
   transition: border-color .25s ease, box-shadow .25s ease;
@@ -157,14 +156,14 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: #1ab188;
+  background: #0aa046;
   color: #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   -webkit-appearance: none;
 }
 .button:hover, .button:focus {
-  background: #179b77;
+  background: #2cc45a;
 }
 
 .button-block {
