--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -8,7 +9,7 @@ html {
 
 body {
   background: #dde9e2;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Titillium Web', Arial, sans-serif;
 }
 
 a {
