--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@font-face {
+        font-family: 'Titillium Web';
+        src: url(http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600);
+}
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -9,7 +13,7 @@ html {
 
 body {
   background: #dde9e2;
-  font-family: 'Titillium Web', Arial, sans-serif;
+  font-family: 'Titillium Web';
 }
 
 a {
