--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
         font-family: 'Titillium Web';
-        src: url(http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600);
+        src: url(fonts/TitilliumWeb-Regular.ttf);
 }
 
 *, *:before, *:after {
