--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,13 @@ div #status{
   color:#0aa046;
   font-size:44px;
 }
+
+#resposta1{
+  color:#0aa046;
+  font-size:44px;
+}
+
+#resposta2{
+  color:#0aa046;
+  font-size:44px;
+}
