--- a/css/style.css
+++ b/css/style.css
@@ -222,11 +222,11 @@ div #status{
   font-size:44px;
 }
 
-/*#status{
+#status{
   display: none;
-}*/
+}
 
-#nameFBresp{
-  color:#0aa046;
-  font-size:44px;
+.IMGsrcFB{
+  float: left;
+  border-radius: 25px;
 }
