--- a/css/users_area.css
+++ b/css/users_area.css
@@ -20,5 +20,11 @@ body {
 
 body .IMGsrcFB{
   float: left;
-  border-radius: 50%;
+  background: transparent no-repeat top left;
+  display: block;
+  text-indent: -999em;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 3px #666;
 }
