--- a/css/users_area.css
+++ b/css/users_area.css
@@ -19,12 +19,16 @@ body {
 }
 
 body .IMGsrcFB{
+  margin: 20px;
   float: left;
-  background: transparent no-repeat top left;
   display: block;
   text-indent: -999em;
   width: 50px;
   height: 50px;
   border-radius: 5px;
   box-shadow: 0px 0px 3px #666;
+}
+
+div #resposta{
+	margin: 20px;
 }
