--- a/css/users_area.css
+++ b/css/users_area.css
@@ -19,14 +19,12 @@ body {
 }
 
 body .IMGsrcFB{
-  margin: 20px;
+  margin:20px;
   float: left;
-  width: 50px;
-  height: 50px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 3px #666;
+  border-radius:50%;
+
 }
 
 div #resposta{
-	margin: 20px;
+	margin:20px;
 }
