--- a/css/users_area.css
+++ b/css/users_area.css
@@ -11,7 +11,7 @@ body {
 #resposta{
   color:#0aa046;
   font-size:44px;
-  margin:60px 0 0 50px;
+  margin:50px 50px 50px 150px;
 }
 
 #resposta2{
@@ -23,5 +23,4 @@ body .IMGsrcFB{
   margin:20px;
   float: left;
   border-radius:50%;
-
 }
