--- a/css/users_area.css
+++ b/css/users_area.css
@@ -20,7 +20,7 @@ body {
 }
 
 body .IMGsrcFB{
-  margin:margin:20px 50px 50px 250px;;
+  margin:20px 50px 50px 250px;
   float: left;
   border-radius:50%;
 }
