--- a/css/users_area.css
+++ b/css/users_area.css
@@ -17,6 +17,9 @@ body {
 #resposta2{
   color:#0aa046;
   font-size:44px;
+  margin:20px 50px 50px 250px;
+  float: left;
+  border-radius:50%;
 }
 
 body .IMGsrcFB{
