--- a/css/user_area.css
+++ b/css/user_area.css
@@ -6,18 +6,108 @@
 body {
   background: #dde9e2;
   font-family: 'Titillium Web';
+  font-size: 15px;
+  line-height: 1.5;
+  margin: 0;
 }
 
 #resposta{
   color:#0aa046;
   font-size:44px;
   float: left;
-  margin: 60px;
+  margin: 10px;
 }
 
-#resposta1 , #resposta2{
-  color:#0aa046;
-  font-size:44px;
-  padding: 20px;
+#resposta1 {
+  color:black;
+  margin-top: -30px;
+  margin-bottom: -20px;
 }
 
+#resposta1:hover {
+    color:#0aa046;
+    background-color: #f1f1f1; 
+}
+
+#icons{
+    display: block;
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 16%
+}
+
+#icons:hover{
+    background-color: #f1f1f1;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 18%;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+.ter{
+    margin-left:18%;
+    padding:1px 16px;
+    height:1000px;
+}
+
+
+input[type=text]#myInp {
+    width: 130px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url(http://www.w3schools.com/howto/searchicon.png);
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+input[type=text]#myInp:focus {
+    width: 100%;
+}
+
+button, input, select, textarea {
+    font: inherit;
+    margin: 0;
+}
+
+#icons{
+    display: block;
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 16%
+}
+
+#icons:hover{
+    background-color: #f1f1f1;
+}
