--- a/css/user_area.css
+++ b/css/user_area.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
 }
 
-#resposta{
+#resposta {
   color:#0aa046;
   font-size:44px;
   margin:10px 0 0 0;
@@ -23,6 +23,12 @@ body {
   color:black;
   margin-top: -30px;
   margin-bottom: -20px;
+}
+
+#resposta2 {
+	color:#0aa046;
+	font-size:70px;
+	text-transform: uppercase;
 }
 
 #resposta1:hover {
