--- a/css/user_area.css
+++ b/css/user_area.css
@@ -120,3 +120,7 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
     -moz-appearance: none;
     appearance: none;
 }
+
+.hidden {
+    display: none; 
+}
