--- a/css/first_time.css
+++ b/css/first_time.css
@@ -7,6 +7,7 @@ html, body {
     font-family: Verdana,sans-serif;
     font-size: 15px;
     line-height: 1.5;
+    background-color: #d8e4dc;
 }
 
 body {
