--- a/css/first_time.css
+++ b/css/first_time.css
@@ -145,4 +145,11 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    margin-top: 30px;
+    margin-left: 20px;
 }
+
+#previous.hidden{
+    display: none;
+}
+
