--- a/css/first_time.css
+++ b/css/first_time.css
@@ -147,6 +147,7 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
     font-size: 16px;
     margin-top: 30px;
     margin-left: 20px;
+    margin-bottom: 30px;
 }
 
 #previous.hidden{
