--- a/css/first_time.css
+++ b/css/first_time.css
@@ -154,3 +154,8 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
     display: none;
 }
 
+#second_page.hidden{
+    display: none;
+    color:#0aa046;
+    margin:10px 0 0 0;
+}
