--- a/css/first_time.css
+++ b/css/first_time.css
@@ -32,6 +32,7 @@ body {
 	color:#0aa046;
 	font-size:60px;
 	text-transform: uppercase;
+    font-weight: bold;
 }
 
 #resposta1:hover {
@@ -39,36 +40,12 @@ body {
     background-color: #f1f1f1; 
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 15%;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-}
-
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-}
-
-li a.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
+div#WelText{
+    margin-right: 360px;
+    margin-left: 360px;
 }
 
 .ter{
-    margin-left:15%;
     padding:1px 16px;
     height:1000px;
 }
@@ -136,7 +113,7 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
     background: url(imgs/settingsGreen.png) no-repeat -9999px -9999px; 
 }
 
-#next, #previous{
+#next{
     background-color: #0aa046;
     border: none;
     color: white;
@@ -146,7 +123,21 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
     display: inline-block;
     font-size: 16px;
     margin-top: 30px;
-    margin-left: 20px;
+    margin-left: 380px;
+    margin-bottom: 30px;
+}
+
+#previous{
+    background-color: #0aa046;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 30px;
+    margin-right: -380px;
     margin-bottom: 30px;
 }
 
