--- a/css/home.css
+++ b/css/home.css
@@ -32,7 +32,7 @@ body {
     background-color: #f1f1f1; 
 }
 
-ul {
+ul:not(#changeslist){
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -43,19 +43,19 @@ ul {
     overflow: auto;
 }
 
-li a {
+li a:not(#changeslist) {
     display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
 }
 
-li a.active {
+li a.active:not(#changeslist) {
     background-color: #4CAF50;
     color: white;
 }
 
-li a:hover:not(.active) {
+li a:hover:not(.active):not(#changeslist) {
     background-color: #555;
     color: white;
 }
@@ -146,3 +146,9 @@ canvas#canvas{
         -webkit-user-select: none;
         -ms-user-select: none;
     }
+
+ul#changeslist{
+  list-style-type: none;
+  overflow:hidden;
+  overflow-y:scroll;
+}
