--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,8 @@
+* { 
+  margin:0; 
+  padding:0; 
+}
+
 html, body {
     font-family: Verdana,sans-serif;
     font-size: 15px;
@@ -149,6 +154,5 @@ canvas#canvas{
 
 ul#changeslist{
   list-style-type: none;
-  overflow:hidden;
-  overflow-y:scroll;
+  line-height: 50px;
 }
