--- a/css/home.css
+++ b/css/home.css
@@ -155,3 +155,16 @@ ul#changeslist{
   list-style-type: none;
   line-height: 50px;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+td:hover{background-color:#f5f5f5}
