--- a/css/first_time.css
+++ b/css/first_time.css
@@ -17,7 +17,7 @@ html, body {
 
 body {
     margin: 0;
-    color:#0aa046;
+    color:#3dd379;
 }
 
 #resposta {
@@ -97,13 +97,13 @@ button, input, select, textarea {
 }
 
 select#LeagueList, select#TeamBRList, select#NtlTeams{
-    background: transparent;
+    background-color: #271222;
     padding: 5px;
     border-radius: 8px;
     font-size: 16px;
     border: 1px solid #ccc;
     height: 34px;
-    color: black;
+    color: white;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -123,7 +123,7 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
 }
 
 #next{
-    background-color: #0aa046;
+    background-color: #2cc45a;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -137,7 +137,7 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
 }
 
 #previous{
-    background-color: #0aa046;
+    background-color: #2cc45a;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -174,7 +174,7 @@ select#LeagueList, select#TeamBRList, select#NtlTeams{
 }
 
 button#start{
-    background-color: #0aa046;
+    background-color: #2cc45a;
     font-size: 22px;
     line-height: 1.5;
     border-radius: 500px;
@@ -186,7 +186,7 @@ button#start{
     white-space: normal;
 }
 
-#start:hover{
+#start:hover, #previous:hover, #next:hover{
     transition: .25s;
-    background: #2cc45a;
+    background: #3dd379;
 }
