--- a/css/first_time.css
+++ b/css/first_time.css
@@ -12,7 +12,7 @@ html, body {
     font-family: 'Helvetica';
     font-size: 15px;
     line-height: 1.5;
-    background-color: #271222;
+    background-color: #262d27;
 }
 
 body {
@@ -97,7 +97,7 @@ button, input, select, textarea {
 }
 
 select#LeagueList, select#TeamBRList, select#NtlTeams{
-    background-color: #271222;
+    background-color: #262d27;
     padding: 5px;
     border-radius: 8px;
     font-size: 16px;
