--- a/css/home.css
+++ b/css/home.css
@@ -189,6 +189,10 @@ td center h2:not(.ResultsNumber){
   font-weight: normal;
 }
 
+button.ChartBtnActivated{
+    background:#0aa046;
+}
+
 ::-webkit-scrollbar{width:9px;height:9px;}
 ::-webkit-scrollbar-button:start:decrement,
 ::-webkit-scrollbar-button:end:increment{display:block;height:0;background-color:transparent;}
