--- a/css/teams.css
+++ b/css/teams.css
@@ -16,7 +16,6 @@ html, body {
 }
 
 body {
-    color:#0aa046;
 }
 
 #resposta {
@@ -119,6 +118,20 @@ ul li .icons{
 ul li .icons:hover{
     color: #0aa046;
     background-color: #f1f1f1;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){
+    background-color: #f2f2f2
 }
 
 ::-webkit-scrollbar{width:9px;height:9px;}
