--- a/css/teams.css
+++ b/css/teams.css
@@ -84,6 +84,10 @@ li a:hover:not(.active) {
     display: none;
 }
 
+.hiddenn {
+    margin-left: 0;
+}
+
 input[type=text]#myInp {
     width: 130px;
     box-sizing: border-box;
