--- a/css/teams.css
+++ b/css/teams.css
@@ -142,6 +142,14 @@ table tbody tr:hover{
     background-color: white;
 }
 
+#StockInfoDisplay{
+    width:90%;
+    height:75%;
+    margin:3%;
+    background-color:#f5f7e1;
+    overflow: hidden;
+    overflow-y: scroll;
+}
 
 ::-webkit-scrollbar{width:9px;height:9px;}
 ::-webkit-scrollbar-button:start:decrement,
