--- a/css/teams.css
+++ b/css/teams.css
@@ -151,6 +151,11 @@ table tbody tr:hover{
     overflow-y: scroll;
 }
 
+.StockInfoDisplaySpan{
+    margin:4%;
+    font-size:350%;
+}
+
 ::-webkit-scrollbar{width:9px;height:9px;}
 ::-webkit-scrollbar-button:start:decrement,
 ::-webkit-scrollbar-button:end:increment{display:block;height:0;background-color:transparent;}
