--- a/css/home.css
+++ b/css/home.css
@@ -112,7 +112,8 @@ button, input, select, textarea {
 
 ul li .icons{
     color: black;
-    margin: 0.8vw;
+    margin: 1vw;
+    font-size:2.5vw;
    }
 
 ul li .icons:hover{
