--- a/css/rankings.css
+++ b/css/rankings.css
@@ -15,6 +15,9 @@ html, body {
     background-color: #dfe3e0;
 }
 
+body {
+}
+
 #resposta {
   color:#0aa046;
   font-size:44px;
@@ -45,7 +48,6 @@ ul:not(#changeslist){
     background-color: #f1f1f1;
     position: fixed;
     height: 100%;
-    overflow: auto;
 }
 
 li a:link {
@@ -73,13 +75,18 @@ li a:hover:not(.active) {
 }
 
 .ter{
-    margin-left:15%;
+    margin-left:15vw;
     padding:1px 16px;
-    height:1000px;
+    min-width: 90%;
+    height: 1000px;
 }
 
 .hidden {
     display: none;
+}
+
+.hiddenn {
+    margin-left: 0;
 }
 
 input[type=text]#myInp {
@@ -106,11 +113,11 @@ button, input, select, textarea {
     margin: 0;
 }
 
+
 ul li .icons{
-    display: block;
-    float: left;
-    position: relative;
-    left: 8%;
+    color: black;
+    margin: 1vw;
+    font-size:2.5vw;
    }
 
 ul li .icons:hover{
