--- a/css/rankings.css
+++ b/css/rankings.css
@@ -26,13 +26,8 @@ body {
 
 #resposta1 {
   color:black;
-  margin-top: -20px;
-}
-
-#resposta2 {
-  color:#0aa046;
-  font-size:60px;
-  text-transform: uppercase;
+  margin-top: -0.2vw;
+  font-size:1.5vw;
 }
 
 #resposta1:hover {
@@ -49,8 +44,11 @@ ul:not(#resposta2){
     position: fixed;
     height: 100%;
     overflow: auto;
-    text-align:center;
     font-size: 2.5vw;
+}
+
+ul li:not(#myInp){
+
 }
 
 li a:link {
