--- a/css/rankings.css
+++ b/css/rankings.css
@@ -118,6 +118,25 @@ button, input, select, textarea {
     font-size: 2vw;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){
+    background-color: #f2f2f2
+}
+
+table tbody tr:hover{
+    background-color: white;
+}
+
+
 ::-webkit-scrollbar{width:9px;height:9px;}
 ::-webkit-scrollbar-button:start:decrement,
 ::-webkit-scrollbar-button:end:increment{display:block;height:0;background-color:transparent;}
