--- a/css/home.css
+++ b/css/home.css
@@ -80,7 +80,7 @@ li a:hover:not(.active) {
 .ter{
     margin-left:15vw;
     padding:1px 16px;
-    min-width:90%;
+    min-width:870px;
 }
 
 .hidden {
