--- a/css/rankings.css
+++ b/css/rankings.css
@@ -76,7 +76,7 @@ li a:hover:not(.active) {
 .ter{
     margin-left:15vw;
     padding:1px 16px;
-    min-width:90%;
+    min-width:870px;
 }
 
 .hidden {
