--- a/css/teams.css
+++ b/css/teams.css
@@ -77,8 +77,8 @@ li a:hover:not(.active) {
 .ter{
     margin-left:15vw;
     padding:1px 16px;
-    min-width: 90%;
     height: 1000px;
+    min-width:870px;
 }
 
 .hidden {
