--- a/css/teams.css
+++ b/css/teams.css
@@ -79,6 +79,8 @@ li a:hover:not(.active) {
     padding:1px 16px;
     height: 1000px;
     min-width:870px;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .hidden {
