--- a/css/rankings.css
+++ b/css/rankings.css
@@ -37,12 +37,12 @@ body {
 
 ul:not(#resposta2){
     list-style-type: none;
-    width: 16vw;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
     overflow: auto;
-    font-size: 2.5vw;
+    font-size: 1.5vw;
 }
 
 .centerize{
@@ -57,9 +57,15 @@ li a:visited{
     color:black;
 }
 
+li{
+    float: left;
+}
+
 li a:not(#changeslist) {
     display: block;
-    padding: 8px 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
@@ -85,30 +91,6 @@ li a:hover:not(.active) {
 
 .hiddenn {
     margin-left: 0;
-}
-
-input[type=text]#myInp {
-    width: 130px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url(http://www.w3schools.com/howto/searchicon.png);
-    background-position: 10px 12px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-input[type=text]#myInp:focus {
-    width: 100%;
-}
-
-button, input, select, textarea {
-    font: inherit;
-    margin: 0;
 }
 
 .fontsf{
