--- a/css/home.css
+++ b/css/home.css
@@ -15,10 +15,6 @@ html, body {
     background-color: #dfe3e0;
 }
 
-body {
-    color:#0aa046;
-}
-
 #resposta {
   color:#0aa046;
   font-size:44px;
@@ -26,31 +22,28 @@ body {
 }
 
 #resposta1 {
-  color:black;
+  color:#dfe3e0;
   margin-top: -20px;
-}
-
-#resposta2 {
-  color:#0aa046;
-  font-size:60px;
-  text-transform: uppercase;
+  font-size:1.5vw;
 }
 
 #resposta1:hover {
     color:#0aa046;
-    background-color: #f1f1f1; 
+    background-color: inherit; 
 }
 
-ul:not(#changeslist){
+ul:not(#resposta1){
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 16vw;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
+    overflow: hidden;
+    background-color: #333;
     overflow: auto;
-    min-width: 16vw;
+    font-size: 1.5vw;
+}
+
+.centerize{
+    text-align: center;
 }
 
 li a:link {
@@ -61,9 +54,15 @@ li a:visited{
     color:black;
 }
 
+li{
+    float: left;
+}
+
 li a:not(#changeslist) {
     display: block;
-    padding: 8px 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
@@ -87,74 +86,12 @@ li a:hover:not(.active) {
     display: none;
 }
 
-input[type=text]#myInp {
-    width: 130px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url(http://www.w3schools.com/howto/searchicon.png);
-    background-position: 10px 12px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
+.hiddenn {
+    margin-left: 0;
 }
 
-input[type=text]#myInp:focus {
-    width: 100%;
-}
-
-button, input, select, textarea {
-    font: inherit;
-    margin: 0;
-}
-
-ul li .icons{
-    color: black;
-    margin: 1vw;
-    font-size:2.5vw;
-   }
-
-ul li .icons:hover{
-    color: #0aa046;
-    background-color: #f1f1f1;
-}
-
-#canvas-holder {
-        width: 100%;
-        margin-top: 50px;
-        text-align: center;
-    }
-#chartjs-tooltip {
-      opacity: 1;
-      position: absolute;
-      background: rgba(0, 0, 0, .7);
-      color: white;
-      border-radius: 3px;
-      -webkit-transition: all .1s ease;
-      transition: all .1s ease;
-      pointer-events: none;
-      -webkit-transform: translate(-50%, 0);
-      transform: translate(-50%, 0);
-    }
-
-.chartjs-tooltip-key {
-      display: inline-block;
-      width: 10px;
-      height: 10px;
-    }
-
-canvas#canvas{
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
-    }
-
-ul#changeslist{
-  list-style-type: none;
-  line-height: 50px;
+.fontsf{
+    font-family: helvetica;
 }
 
 table {
@@ -163,35 +100,18 @@ table {
 }
 
 th, td {
-    padding: 8px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
+    padding: 8px;
 }
 
-td:hover{
-  background-color:white;
+tr:nth-child(even){
+    background-color: #f2f2f2
 }
 
-span.XXxX{
-  font-weight: bolder;
-  color: #333;
-  font-size:12px;
+table tbody tr:hover{
+    background-color: white;
 }
 
-span.ResultsNumber{
-  border:1px solid #7d8aa0;
-  padding:2px;
-  color: gray;
-}
-
-td center h2:not(.ResultsNumber){
-  color: black;
-  font-weight: normal;
-}
-
-button.ChartBtnActivated{
-    background:#0aa046;
-}
 
 ::-webkit-scrollbar{width:9px;height:9px;}
 ::-webkit-scrollbar-button:start:decrement,
