--- a/css/teams.css
+++ b/css/teams.css
@@ -15,9 +15,6 @@ html, body {
     background-color: #dfe3e0;
 }
 
-body {
-}
-
 #resposta {
   color:#0aa046;
   font-size:44px;
@@ -25,29 +22,28 @@ body {
 }
 
 #resposta1 {
-  color:black;
+  color:#dfe3e0;
   margin-top: -20px;
-}
-
-#resposta2 {
-  color:#0aa046;
-  font-size:60px;
-  text-transform: uppercase;
+  font-size:1.5vw;
 }
 
 #resposta1:hover {
     color:#0aa046;
-    background-color: #f1f1f1; 
+    background-color: inherit; 
 }
 
-ul:not(#changeslist){
+ul:not(#resposta1){
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 16%;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
+    overflow: hidden;
+    background-color: #333;
+    overflow: auto;
+    font-size: 1.5vw;
+}
+
+.centerize{
+    text-align: center;
 }
 
 li a:link {
@@ -58,9 +54,15 @@ li a:visited{
     color:black;
 }
 
+li{
+    float: left;
+}
+
 li a:not(#changeslist) {
     display: block;
-    padding: 8px 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
@@ -77,7 +79,6 @@ li a:hover:not(.active) {
 .ter{
     margin-left:15vw;
     padding:1px 16px;
-    height: 1000px;
     min-width:870px;
 }
 
@@ -89,40 +90,8 @@ li a:hover:not(.active) {
     margin-left: 0;
 }
 
-input[type=text]#myInp {
-    width: 130px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url(http://www.w3schools.com/howto/searchicon.png);
-    background-position: 10px 12px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-input[type=text]#myInp:focus {
-    width: 100%;
-}
-
-button, input, select, textarea {
-    font: inherit;
-    margin: 0;
-}
-
-
-ul li .icons{
-    color: black;
-    margin: 1vw;
-    font-size:2.5vw;
-   }
-
-ul li .icons:hover{
-    color: #0aa046;
-    background-color: #f1f1f1;
+.fontsf{
+    font-family: helvetica;
 }
 
 table {
@@ -143,18 +112,8 @@ table tbody tr:hover{
     background-color: white;
 }
 
-#StockInfoDisplay{
-    width:90%;
-    height:75%;
-    margin:3%;
-    background-color:#f5f7e1;
-    overflow: hidden;
-    overflow-y: scroll;
-}
-
-.StockInfoDisplaySpan{
-    margin:4%;
-    font-size:350%;
+.activebtn{
+    background-color: #0aa046;
 }
 
 ::-webkit-scrollbar{width:9px;height:9px;}
