--- a/css/mine.css
+++ b/css/mine.css
@@ -146,7 +146,7 @@ td.text-right {
 #Pname{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: #090f3a;
+  background-color: #ed3138;
   font-size: 30px;
   font-weight: bold;
   padding: 10px;
