--- a/css/mine.css
+++ b/css/mine.css
@@ -143,7 +143,7 @@ td.text-right {
   text-align: right;
 }
 
-#Pname, #Mname, #Cname, #CoinsName{
+#Pname, #Mname, #Cname, #CoinsName, #Tname{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
   background-color: #ed3138;
@@ -153,7 +153,7 @@ td.text-right {
   text-align: center;
 }
 
-#Ptable, #Mtable, #Ctable, #CoinsTable{
+#Ptable, #Mtable, #Ctable, #CoinsTable, #Ttable{
   display: none;
 }
 
@@ -171,4 +171,9 @@ td.text-right {
 
 #CoinsName{
   background-color: #07162d;
+}
+
+#Tname{
+  color: black;
+  background-color: white;
 }
