--- a/css/mine.css
+++ b/css/mine.css
@@ -153,7 +153,7 @@ td.text-right {
   text-align: center;
 }
 
-#Ptable, #Mtable, #Ctable, #CoinsTable, #Ttable, #Pvariat_percent, #Pvariat_money{
+#Ptable, #Mtable, #Ctable, #CoinsTable, #Ttable, #Pvariat_percent, #Pvariat_money, #Cvariat_percent, #Cvariat_money,#Mvariat_percent, #Mvariat_money, #Tvariat_percent, #Tvariat_money{
   display: none;
 }
 
