--- a/css/emp.css
+++ b/css/emp.css
@@ -1,3 +1,116 @@
-body{
-  background: '#E87261';
+* {box-sizing: border-box;}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #FFCDB0;
+}
+
+h2 {
+  font-family: Helvetica;
+  font-size: 40px;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #818699;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4563CC;
+  color: white;
+}
+
+.topnav .search-container {
+  float: right;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
+
+.btnn{
+    color: #fff;
+    background-color: #3b5998;
+    font-size: 22px;
+    line-height: 1.5;
+    border-radius: 500px;
+    padding: 7px 35px;
+    outline: none;
+    font-family: 'Titillium Web', sans-serif;
+    border-width: 0;
+    letter-spacing: 1.2px;
+    min-width: 130px;
+    white-space: normal;
+}
+
+.btnn:hover{
+    transition: .25s;
+    background-color: #3a61b3;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 200px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    margin-top: -4px;
+    padding: 2px 16px;
+    background-color: white;
 }
