--- a/css/emp.css
+++ b/css/emp.css
@@ -66,7 +66,7 @@ h2 {
   .topnav .search-container {
     float: none;
   }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
+.topnav a, .topnav input[type=text], .topnav .search-container button {
     float: none;
     display: block;
     text-align: left;
@@ -103,6 +103,7 @@ h2 {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 200px;
+    background-color: white;
 }
 
 .card:hover {
@@ -113,4 +114,22 @@ h2 {
     margin-top: -4px;
     padding: 2px 16px;
     background-color: white;
+}
+
+a {
+   color: inherit;
+ }
+
+ .videoWrapper {
+ 	position: relative;
+ 	padding-bottom: 56.25%; /* 16:9 */
+ 	padding-top: 25px;
+ 	height: 0;
+ }
+ .videoWrapper iframe {
+ 	position: absolute;
+ 	top: 0;
+ 	left: 10%;
+ 	width: 80%;
+ 	height: 80%;
 }
