--- a/css/emp.css
+++ b/css/emp.css
@@ -120,16 +120,24 @@ a {
    color: inherit;
  }
 
- .videoWrapper {
+.videoWrapper {
  	position: relative;
  	padding-bottom: 56.25%; /* 16:9 */
  	padding-top: 25px;
  	height: 0;
  }
- .videoWrapper iframe {
+.videoWrapper iframe {
  	position: absolute;
  	top: 0;
  	left: 10%;
  	width: 80%;
  	height: 80%;
+}
+
+.logo_a{
+  padding: 8px !important;
+}
+
+.logo_a:hover{
+  background-color: inherit !important;
 }
